test/ui/tests/name-resolution/exposure/access-private-constructors.lushui
;;; TEST fail check

module separation of
    data Private: Type of
        private: Private
    
    @abstract
    data Private-Abstract: Type of
        private: Private-Abstract

    @public @abstract
    data Public-Abstract: Type of
        private: Public-Abstract
    
    @(public capsule)
    module further-separation of
        @(public super)
        data Hidden: Type of
            hidden: Hidden
        
        @(public capsule) @abstract
        data Abstract: Type of
            hidden: Abstract

use separation.Private.private as p0
use separation.Private-Abstract.private as p1
use separation.Public-Abstract.private as p2

p3: separation.Public-Abstract = separation.Public-Abstract.private

use separation.further-separation.((Hidden.hidden as h) (Abstract.hidden as ho))
